<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_connect"
            android:title="@string/connect" />
        <item
            android:id="@+id/nav_mouse"
            android:icon="@drawable/ic_mouse"
            android:title="@string/mouse" />
        <item
            android:id="@+id/nav_keyboard"
            android:icon="@drawable/ic_keyboard"
            android:title="@string/keyboard" />
        <item
            android:id="@+id/nav_presentation"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/presentation" />
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/apps" />

    </group>

</menu>
